# Nota.AI

./: LICENSE  README.md  pyproject.toml  requirements.txt
audio_process/: audio_recorder.py  base.py
nota_ai/: engine.py
nota_ai/audio_process/: audio_loader.py  audio_recorder.py  base.py
nota_ai/generate/: base.py  llm_generator.py
nota_ai/transcribe/: base.py  whisper_scribe.py
tests/: output_example.md  test_audio.m4a  test_audio1.m4a  test_full_pipeline.py  test_whisper.py
transcribe/: base.py
